melhoria da views, nos templates e css. Introdução do pytest

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     {% include 'recipes/partials/head.html' %}
     <title>{% block title %}{% endblock title %} Recipes</title>
